implemented landing page layout

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,11 @@
 
 @custom-variant dark (&:is(.dark *));
 
+@theme {
+  --color-primary-500: #0074d4;
+  --color-gray-200: #f1f0ed;
+}
+
 :root {
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
