added dashboard landing page

--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,9 @@
 .gradient-light-blue-bg {
   background: linear-gradient(to top, #004cb6, #004cb6, #1488e8);
 }
+button {
+  cursor: pointer;
+}
 :root {
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
