added google fonts

--- a/src/index.css
+++ b/src/index.css
@@ -150,3 +150,10 @@ button {
     @apply bg-background text-foreground;
   }
 }
+
+body {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
